// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`error-icon prop 1`] = `
<div class="van-image">
  <div class="van-image__error"><i class="van-icon van-icon-error van-image__error-icon">
      <!----></i></div>
</div>
`;

exports[`lazy load 1`] = `
<div class="van-image"><img class="van-image__img">
  <div class="van-image__loading"><i class="van-icon van-icon-photo-o van-image__loading-icon">
      <!----></i></div>
</div>
`;

exports[`lazy-load error event 1`] = `
<div class="van-image">
  <div class="van-image__error"><i class="van-icon van-icon-warning-o van-image__error-icon">
      <!----></i></div>
</div>
`;

exports[`lazy-load load event 1`] = `<div class="van-image"><img class="van-image__img"></div>`;

exports[`load event 1`] = `<div class="van-image"><img src="https://img.yzcdn.cn/vant/cat.jpeg" class="van-image__img"></div>`;

exports[`load event 2`] = `
<div class="van-image"><img src="" class="van-image__img">
  <div class="van-image__loading"><i class="van-icon van-icon-photo-o van-image__loading-icon">
      <!----></i></div>
</div>
`;

exports[`loading-icon prop 1`] = `
<div class="van-image"><img class="van-image__img">
  <div class="van-image__loading"><i class="van-icon van-icon-success van-image__loading-icon">
      <!----></i></div>
</div>
`;

exports[`radius prop 1`] = `
<div class="van-image" style="overflow: hidden; border-radius: 3px;"><img src="https://img.yzcdn.cn/vant/cat.jpeg" class="van-image__img">
  <div class="van-image__loading"><i class="van-icon van-icon-photo-o van-image__loading-icon">
      <!----></i></div>
</div>
`;

exports[`show-error prop 1`] = `<div class="van-image"></div>`;

exports[`show-loading prop 1`] = `<div class="van-image"><img class="van-image__img"></div>`;
